--- a/site/static/css/reader.css
+++ b/site/static/css/reader.css
@@ -153,6 +153,27 @@ img {
     margin: 1.5em auto;
 }
 
+/* === Embedded Video === */
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+    overflow: hidden;
+    margin: 1.5em 0;
+    border-radius: 4px;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    border-radius: 4px;
+}
+
 code {
     font-family: var(--font-mono);
     background: var(--code-bg);
